manifests/10-vote-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deploy
  namespace: my-app
  labels:
    app: vote
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
      tier: frontend
  template:
    metadata:
      labels:
        app: vote
        tier: frontend
    spec:
      containers:
      - name: vote-app
        image: dockersamples/examplevotingapp_vote
        ports:
        - containerPort: 80
