manifests/30-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-app
  name: worker-deploy
  labels:
    app: worker
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
      tier: backend
  template:
    metadata:
      labels:
        app: worker
        tier: backend
    spec:
      containers:
      - name: worker-framework
        image: dockersamples/examplevotingapp_worker
