manifests/40-redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-app
  name: redis-deploy
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis-db-container
        image: redis
