manifests/50-postgres-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: my-app
  name: postgres-deploy
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres-db-container
        image: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
