manifests/11-vote-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: vote
  labels:
    app: vote
    tier: frontend
spec:
  selector:
    app: vote
    tier: frontend
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
  type: ClusterIP
