manifests/21-result-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: result
  labels:
    app: result
    tier: frontend
spec:
  selector:
    app: result
    tier: frontend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
