manifests/41-redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: redis
  labels:
    app: redis
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  type: ClusterIP
