manifests/51-postgres-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-app
  name: db
  labels:
    app: db
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
