manifests/62-redis-vote-NP.yaml
## Allow vote → redis (port 6379)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vote-to-redis
  namespace: my-app
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: vote
          tier: frontend
    ports:
    - protocol: TCP
      port: 6379
