manifests/64-backends-worker-NP.yaml
## Allow worker → redis and postgres
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-worker-to-db-and-redis
  namespace: my-app
spec:
  podSelector:
    matchExpressions:
    - { key: app, operator: In, values: ["db", "redis"] }
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: worker
          tier: backend
    ports:
    - protocol: TCP
      port: 5432   # postgres
    - protocol: TCP
      port: 6379   # redis
